# flows-rs

./: Cargo.toml
flows/: Cargo.toml
flows-core/: Cargo.toml
flows-core/src/: async_fn.rs  convert.rs  custom_fn.rs  lib.rs  my_try.rs  self_ref.rs  utils.rs
flows-core/src/ops/: compose.rs  for_each.rs  map.rs  mod.rs
flows-macros/: Cargo.toml
flows-macros/src/: lib.rs  ops.rs
flows-macros/src/macro_utils/: mod.rs  normalize_op_input.rs
flows-util/: Cargo.toml
flows-util/src/: lib.rs
flows-util/src/flow_impls/: mod.rs
flows-util/src/ops/: mod.rs
flows/src/: lib.rs  ops.rs
flows/tests/: flows.rs  utils.rs
