[package]
name = "flows-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.flows-core]
path = "../flows-core"
version = "0.1.0"

[dependencies.flows-macros]
path = "../flows-macros"
version = "0.1.0"

[dependencies.pin-project-lite]
workspace = true
